# discord-emoji

./: Cargo.toml  LICENSE  README.md  build.rs  discord_emojis.json
src/: lib.rs
