[package]
name = "discord-emoji"
version = "0.1.0"
authors = ["Noskcaj <kcajdev@gmail.com>"]
edition = "2018"

[features]
default = ["diversity"]
diversity = [] # Include diversity emojis, at the cost of slightly larger binaries

[dependencies]
phf = "0.11.1"

[build-dependencies]
phf_codegen = "0.11.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
